src/yini_test/cases/golden/strict/valid/comments/hash-comments.strict.yini
@yini strict

# Full-line hash comment before a section.
^ Application
# Full-line hash comment before a member.
name = "strict-hash-comments"
enabled = true

/END
