src/yini_test/cases/golden/strict/invalid/orphan-members/root-member-before-section.strict.yini
@yini strict

rootMember = "This member appears before the required top-level section."

^ App
name = "root-member-before-section"
enabled = true

/END
